--- a/CourseWork/conclusion.tex
+++ b/CourseWork/conclusion.tex
@@ -9,4 +9,4 @@
 Основные результаты работы заключаются в следующем.
 \input{common/concl}
 
-И какая-нибудь заключающая фраза.
+Полученные знания и заключения позволят в краткий срок реализовать описанную систему, а также сделать её гибкой и расширяемой.
