--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -1,12 +1,23 @@
 
-{\actuality} Введение в тему работы
+{\actuality} Рассматривается новая модель процессов реального времени.  
 
-{\aim} Подготовить/реализовать/изучить.
+Ключевые особенности модели: 
+
+Осуществлении переходов в реальном времени (а не в абстрактном, модельном). 
+
+Всегда реализуется максимально возможный параллелизм срабатывания элементов интерфейса. Этот подход позволяет в системе реального времени избавиться от возможности нескольких событий с одинаковым временем; 
+
+Рассматриваемые системы являются динамическими, могут структурно меняться во времени и иметь при функционировании априори не ограниченную сложность. 
+
+«Вычислительными» переходами – каждый переход представляет некоторые вычисления
+
+{\aim} Проектирование программного продукта, позволяющего описывать и моделировать проходящие в реальном времени параллельные вычислительные процессы в динамических системах. 
 
 Для~достижения поставленной цели необходимо было решить следующие {\tasks}:
 \begin{enumerate}
-  \item Задача 1
-  \item Задача 2
+  \item Составить требования к реализации формальной модели.
+  \item Изучить доступные инструменты реализации и выбрать наиболее подходящий.
+  \item Определить общую архитектуру программы.
 \end{enumerate}
     
 
