--- a/common/concl.tex
+++ b/common/concl.tex
@@ -2,8 +2,7 @@
 %% 5.3.3 В заключении диссертации излагают итоги выполненного исследования, рекомендации, перспективы дальнейшей разработки темы.
 %% 9.2.3 В заключении автореферата диссертации излагают итоги данного исследования, рекомендации и перспективы дальнейшей разработки темы.
 \begin{enumerate}
-  \item На основе анализа \ldots
-  \item Численные исследования показали, что \ldots
-  \item Математическое моделирование показало \ldots
-  \item Для выполнения поставленных задач был создан \ldots
+  \item На основе анализа предложенной модели вычислений составлены требования к реализации программного комплекса, моделирующего описанную вычислительную систему.
+  \item На основе требований изучены и выбраны наиболее подходящие для реализации библиотеки.
+  \item Спроектирована общая структура программного комплекса. 
 \end{enumerate}
