--- a/common/data.tex
+++ b/common/data.tex
@@ -13,7 +13,7 @@
 \newcommand{\kafedra}                % Кафедра
 {Кафедра Прикладной Математики}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\texorpdfstring{Тема}{Тема}}
+{\texorpdfstring{Проектирование ПО для описания и моделирования вычислительных процессов в динамических системах}{Проектирование ПО для описания и моделирования вычислительных процессов в динамических системах}}
 \newcommand{\courseName}
 {Название Предмета}
 \newcommand{\thesisCity}               % Диссертация, город защиты
@@ -26,7 +26,7 @@
 \newcommand{\supervisorFio}            % Научный руководитель, ФИО
 {Фамилия Имя Отчество}
 \newcommand{\supervisorFioShort}            % Научный руководитель, ФИО
-{И.О.~Фамилия}
+{В.Н.~Фальк}
 
 
 % To avoid conflict with beamer class use \providecommand
